test/input/invalid/function_3.js
!function eval() {
}();

!function arguments() {
    "use strict";
}();
